--- a/gallery.html
+++ b/gallery.html
@@ -105,69 +105,122 @@
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div id="gallerySLide" class="gallery_area">
                 <a href="img/gallery/img-large1.jpg" title="This is Title">
-                  <img class="gallery_img" src="img/gallery/img-small1.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/1.jpg" alt="img" />
                 <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large2.jpg" title="This is Title2">
-                  <img class="gallery_img" src="img/gallery/img-small2.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/2.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large3.jpg" title="This is Title3">
-                  <img class="gallery_img" src="img/gallery/img-small3.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/3.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large4.jpg" title="This is Title4">
-                  <img class="gallery_img" src="img/gallery/img-small4.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/4.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large1.jpg" title="This is Title5">
-                  <img class="gallery_img" src="img/gallery/img-small1.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/5.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large2.jpg">
-                  <img class="gallery_img" src="img/gallery/img-small2.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/6.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large3.jpg">
-                  <img class="gallery_img" src="img/gallery/img-small3.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/7.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large4.jpg">
-                  <img class="gallery_img" src="img/gallery/img-small4.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/8.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                  <a href="img/gallery/img-large1.jpg" title="This is Title">
-                  <img class="gallery_img" src="img/gallery/img-small1.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/9.jpg" alt="img" />
                 <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large2.jpg" title="This is Title2">
-                  <img class="gallery_img" src="img/gallery/img-small2.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/10.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large3.jpg" title="This is Title3">
-                  <img class="gallery_img" src="img/gallery/img-small3.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/11.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large4.jpg" title="This is Title4">
-                  <img class="gallery_img" src="img/gallery/img-small4.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/12.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large1.jpg" title="This is Title5">
-                  <img class="gallery_img" src="img/gallery/img-small1.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/13.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large2.jpg">
-                  <img class="gallery_img" src="img/gallery/img-small2.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/14.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large3.jpg">
-                  <img class="gallery_img" src="img/gallery/img-small3.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/15.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
                 <a href="img/gallery/img-large4.jpg">
-                  <img class="gallery_img" src="img/gallery/img-small4.jpg" alt="img" />
+                  <img class="gallery_img" src="img/gallery/16.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/17.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/18.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/19.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/20.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/21.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/22.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/23.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/24.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/25.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/26.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/27.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/28.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/img-large4.jpg">
+                  <img class="gallery_img" src="img/gallery/29.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				
             </div>
           </div>
         </div>
@@ -190,7 +243,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomRight">
-                <p>Designed by <a href="http://wpfreeware.com/" rel="nofollow">Wpfreeware.com</a></p>
+                <p>Designed by WpF. Modified and Cared by <a href="http://djpandey01.tk/" rel="nofollow">Dibyajyoti Pandey</a></p>
               </div>
             </div>
           </div>
