Edited contact and logo

--- a/about.html
+++ b/about.html
@@ -39,6 +39,9 @@
     <link id="switcher" href="css/themes/default-theme.css" rel="stylesheet">
     <!-- Main structure css file -->
     <link href="style.css" rel="stylesheet">
+	<!-- Page Icon -->
+	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
    
     <!-- Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>   
@@ -72,10 +75,9 @@
                 <span class="icon-bar"></span>
               </button>
               <!-- LOGO -->
-              <!-- TEXT BASED LOGO -->
-              <a class="navbar-brand" href="index.html">Raipur B. Ed <span>College</span></a>            
+             
               <!-- IMG BASED LOGO  -->
-               <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>  -->           
+               <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>       
                      
             </div>
               <div id="navbar" class="navbar-collapse collapse">
