--- a/facility.html
+++ b/facility.html
@@ -35,7 +35,9 @@
     <link id="switcher" href="css/themes/default-theme.css" rel="stylesheet">
     <!-- Main structure css file -->
     <link href="style.css" rel="stylesheet">
-   
+   <!-- Page Icon -->
+	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+    <link rel="icon" href="/favicon.png" type="image/x-icon">
     <!-- Google fonts -->
     <link href='http://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet' type='text/css'>   
     <link href='http://fonts.googleapis.com/css?family=Varela' rel='stylesheet' type='text/css'>    
@@ -68,10 +70,9 @@
               <span class="icon-bar"></span>
             </button>
             <!-- LOGO -->
-            <!-- TEXT BASED LOGO -->
-                          <a class="navbar-brand" href="index.html">Raipur B. Ed <span>College</span></a>            
+                    
             <!-- IMG BASED LOGO  -->
-             <!-- <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>  -->           
+             <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="logo"></a>         
                    
           </div>
            <div id="navbar" class="navbar-collapse collapse">
@@ -104,6 +105,7 @@
       <div class="container">
         <div class="row">
 		<h2 class="title">Available College Facilities</h2>
+		
           <!-- start course content -->
           <div class="col-lg-8 col-md-8 col-sm-8">
             <div class="courseArchive_content">
