preloader removed and CNAME added

--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@ Below you can find a quick roadmap to get to our office.</p>
 				<p>West Bengal, India</p>
 				<p>Pin Code : 722134</p>
 				<p><b>Phone:</b>+91-9434-654-509</p>
-               <p><b>Email:</b> raipurbedcollege@gmail.com</p>
+               <p><b>Email:</b><a href="mailto:raipurbedcollege@gmail.com">raipurbedcollege@gmail.com</a></p>
              </div>
              
            </div>
@@ -160,12 +160,12 @@ Below you can find a quick roadmap to get to our office.</p>
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomLeft">
-                <p> Copyright &copy; All Rights Reserved</p>
+                <p> Copyright &copy; WpF. All Rights Reserved</p>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomRight">
-                <p>Designed by WpF. Modified and Cared by <a href="http://djpandey01.tk/" rel="nofollow">Dibyajyoti Pandey</a></p>
+                <p>Designed by WpF. Modified and Cared by <a href="http://www.djpandey.me/" rel="nofollow">S. M. Infotech</a></p>
               </div>
             </div>
           </div>
@@ -182,8 +182,7 @@ Below you can find a quick roadmap to get to our office.</p>
 
     <!-- initialize jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Preloader js file -->
-    <script src="js/queryloader2.min.js" type="text/javascript"></script>
+   
     <!-- For smooth animatin  -->
     <script src="js/wow.min.js"></script>  
     <!-- Bootstrap js -->
