--- a/events-archive.html
+++ b/events-archive.html
@@ -82,6 +82,7 @@
                 <li><a href="admission.html">Admission</a></li>
                 <li><a href="affiliation.html">Affiliation</a></li>
                 <li  class="active"><a href="events-archive.html">Events</a></li>
+				<li><a href="ncte.html">Faculties</a></li>
 				<li><a href="facility.html">Facilities</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
 				<li><a href="about.html">About Us</a></li>   				            
@@ -200,7 +201,7 @@
             <div class="courseArchive_sidebar">
               <!-- start single sidebar -->
               <div class="single_sidebar">
-                <h2>Popular Events <span class="fa fa-angle-double-right"></span></h2>
+                <h2>Events <span class="fa fa-angle-double-right"></span></h2>
                 <ul class="news_tab">
                   <li>
                     <div class="media">
@@ -210,12 +211,12 @@
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#">Dummy text of the printing and typesetting industry</a>
-                       <span class="feed_date">27.02.15</span>
+                       <a href="#">No events are there at present</a>
+                       <span class="feed_date"></span>
                       </div>
                     </div>
                   </li>
-                  <li>
+                  <!-- <li>
                     <div class="media">
                       <div class="media-left">
                         <a href="#" class="news_img">
@@ -240,7 +241,7 @@
                        <span class="feed_date">28.02.15</span>                
                       </div>
                     </div>
-                  </li>                  
+                  </li>  -->                
                 </ul>
               </div>
               <!-- End single sidebar -->
@@ -264,12 +265,12 @@
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomLeft">
-                <p> Copyright &copy; All Rights Reserved</p>
+                <p> Copyright &copy; WpF All Rights Reserved</p>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomRight">
-                <p>Designed by WpF. Modified and Cared by <a href="http://djpandey01.tk/" rel="nofollow">Dibyajyoti Pandey</a></p>
+                <p>Designed by WpF. Modified and Cared by <a href="http://www.djpandey.me/" rel="nofollow">S. M. Infotech</a></p>
               </div>
             </div>
           </div>
