--- a/about.html
+++ b/about.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--=============================================== 
-    Template Design By WpFreeware Team.
-    Author URI : http://www.wpfreeware.com/
-    ====================================================-->
+    
     <!-- Basic Page Needs
     ================================================== -->
     <meta charset="utf-8">
@@ -32,7 +29,7 @@
     <!-- smooth animate css file -->
     <link rel="stylesheet" href="css/animate.css"> 
     <!-- preloader -->
-    <link rel="stylesheet" href="css/queryLoader.css" type="text/css" />
+    <link rel="stylesheet" href="css/queryLoader.css" type="text/css" /
     <!-- gallery slider css -->
     <link type="text/css" media="all" rel="stylesheet" href="css/jquery.tosrus.all.css" />    
     <!-- Default Theme css file -->
@@ -86,9 +83,10 @@
                 <li><a href="admission.html">Admission</a></li>
                 <li><a href="affiliation.html">Affiliation</a></li>
                 <li><a href="events-archive.html">Events</a></li>
+				<li><a href="ncte.html">Faculties</a></li>
 				<li><a href="facility.html">Facilities</a></li>
                 <li><a href="gallery.html">Gallery</a></li>
-				<li  class="active"><a href="about.html">About Us</a></li>   				            
+				<li class="active"><a href="about.html">About Us</a></li>   				            
                 <li><a href="contact.html">Contact</a></li>
               </ul>           
             </div><!--/.nav-collapse -->
@@ -151,14 +149,15 @@ self-motivation, well integrated character of the trainee so that they may take 
 					 <p>The Overall administration of the college is looked after by the University of Burdwan, through the Principal of the College. Academic activities including sessional / co- curricular activities are monitored by the teacher's council. However for the interest of the training in democratic living.</p>
                     <h3>Governing Body Of Raipur B.Ed College</h3>
 					<li><span class="fa fa-angle-double-right"></span> Biplab SinghaMahapatra, President</li> 
-					<li><span class="fa fa-angle-double-right"></span> Jagadananda Kole, Member </li>
 					<li><span class="fa fa-angle-double-right"></span> Ranjan Kumar Mandal, Member </li>
 					<li><span class="fa fa-angle-double-right"></span> Ashok Kumar Dey, Member </li>
-					<li><span class="fa fa-angle-double-right"></span> Prajyoti Bag,Member </li>
+					<li><span class="fa fa-angle-double-right"></span> Pintu Mondal,Member </li>
 					<li><span class="fa fa-angle-double-right"></span> Ujjwal Kumar Tripathy, Member </li>
 					<li><span class="fa fa-angle-double-right"></span> Subhra kanti Chatterjee, Member </li>
-					<li><span class="fa fa-angle-double-right"></span> Amal Bhattacharya, Member</li>
-					</ul>                    
+					</ul>   
+					<h3>Audit Report For Financial Year 2017-18</h3>
+					<li><a href="Audit Report For Financial Year 2017-18.pdf" target="_blank">Click to view</a></li>
+					
                   </div>                 
                 </div>
                 <!-- End single blog -->                
@@ -173,7 +172,7 @@ self-motivation, well integrated character of the trainee so that they may take 
             <div class="courseArchive_sidebar">
               <!-- start single sidebar -->
               <div class="single_sidebar">
-                <h2>Popular Events <span class="fa fa-angle-double-right"></span></h2>
+                <h2>Events <span class="fa fa-angle-double-right"></span></h2>
                 <ul class="news_tab">
                   <li>
                     <div class="media">
@@ -183,12 +182,12 @@ self-motivation, well integrated character of the trainee so that they may take 
                         </a>
                       </div>
                       <div class="media-body">
-                       <a href="#">Dummy text of the printing and typesetting industry</a>
-                       <span class="feed_date">27.02.15</span>
+                       <a href="#">No events are there at present</a>
+                       <span class="feed_date"></span>
                       </div>
                     </div>
                   </li>
-                  <li>
+                  <!-- <li>
                     <div class="media">
                       <div class="media-left">
                         <a href="#" class="news_img">
@@ -213,7 +212,7 @@ self-motivation, well integrated character of the trainee so that they may take 
                        <span class="feed_date">28.02.15</span>                
                       </div>
                     </div>
-                  </li>                  
+                  </li>  -->                
                 </ul>
               </div>
               <!-- End single sidebar -->
@@ -235,12 +234,12 @@ self-motivation, well integrated character of the trainee so that they may take 
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomLeft">
-                <p> Copyright &copy; All Rights Reserved</p>
+                <p> Copyright &copy; WpF. All Rights Reserved</p>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomRight">
-                <p>Designed by WpF. Modified and Cared by <a href="http://djpandey01.tk/" rel="nofollow">Dibyajyoti Pandey</a></p>
+                <p>Designed by WpF. Modified and Cared by <a href="http://www.djpandey.me/" rel="nofollow">S. M. Infotech</a></p>
               </div>
             </div>
           </div>
@@ -258,7 +257,7 @@ self-motivation, well integrated character of the trainee so that they may take 
     <!-- initialize jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <!-- Preloader js file -->
-    <script src="js/queryloader2.min.js" type="text/javascript"></script>
+    <!--<script src="js/queryloader2.min.js" type="text/javascript"></script>-->
     <!-- For smooth animatin  -->
     <script src="js/wow.min.js"></script>  
     <!-- Bootstrap js -->
