--- a/gallery.html
+++ b/gallery.html
@@ -82,8 +82,9 @@
                 <li><a href="admission.html">Admission</a></li>
                 <li><a href="affiliation.html">Affiliation</a></li>
                 <li><a href="events-archive.html">Events</a></li>
+				<li><a href="ncte.html">Faculties</a></li>
 				<li><a href="facility.html">Facilities</a></li>
-                <li  class="active"><a href="gallery.html">Gallery</a></li>
+                <li class="active"><a href="gallery.html">Gallery</a></li>
 				<li><a href="about.html">About Us</a></li>   				            
                 <li><a href="contact.html">Contact</a></li>
               </ul>           
@@ -107,120 +108,124 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12">
             <div id="gallerySLide" class="gallery_area">
-                <a href="img/gallery/img-large1.jpg" title="This is Title">
+                <a href="img/gallery/1.jpg" title="">
                   <img class="gallery_img" src="img/gallery/1.jpg" alt="img" />
                 <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large2.jpg" title="This is Title2">
+                <a href="img/gallery/2.jpg" title="">
                   <img class="gallery_img" src="img/gallery/2.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large3.jpg" title="This is Title3">
+                <a href="img/gallery/3.jpg" title="">
                   <img class="gallery_img" src="img/gallery/3.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large4.jpg" title="This is Title4">
+                <a href="img/gallery/4.jpg" title="">
                   <img class="gallery_img" src="img/gallery/4.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large1.jpg" title="This is Title5">
+                <a href="img/gallery/5.jpg" title="">
                   <img class="gallery_img" src="img/gallery/5.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large2.jpg">
+                <a href="img/gallery/6.jpg">
                   <img class="gallery_img" src="img/gallery/6.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large3.jpg">
+                <a href="img/gallery/7.jpg">
                   <img class="gallery_img" src="img/gallery/7.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large4.jpg">
+                <a href="img/gallery/8.jpg">
                   <img class="gallery_img" src="img/gallery/8.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                 <a href="img/gallery/img-large1.jpg" title="This is Title">
+                 <a href="img/gallery/9.jpg" title="">
                   <img class="gallery_img" src="img/gallery/9.jpg" alt="img" />
                 <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large2.jpg" title="This is Title2">
+                <a href="img/gallery/10.jpg" title="">
                   <img class="gallery_img" src="img/gallery/10.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large3.jpg" title="This is Title3">
+                <a href="img/gallery/11.jpg" title="">
                   <img class="gallery_img" src="img/gallery/11.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large4.jpg" title="This is Title4">
+                <a href="img/gallery/12.jpg" title="">
                   <img class="gallery_img" src="img/gallery/12.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large1.jpg" title="This is Title5">
+                <a href="img/gallery/13.jpg" title="">
                   <img class="gallery_img" src="img/gallery/13.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large2.jpg">
+                <a href="img/gallery/14.jpg">
                   <img class="gallery_img" src="img/gallery/14.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large3.jpg">
+                <a href="img/gallery/15.jpg">
                   <img class="gallery_img" src="img/gallery/15.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-                <a href="img/gallery/img-large4.jpg">
+                <a href="img/gallery/16.jpg">
                   <img class="gallery_img" src="img/gallery/16.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/17.jpg">
                   <img class="gallery_img" src="img/gallery/17.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/18.jpg">
                   <img class="gallery_img" src="img/gallery/18.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/19.jpg">
                   <img class="gallery_img" src="img/gallery/19.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/20.jpg">
                   <img class="gallery_img" src="img/gallery/20.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/21.jpg">
                   <img class="gallery_img" src="img/gallery/21.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/22.jpg">
                   <img class="gallery_img" src="img/gallery/22.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/23.jpg">
                   <img class="gallery_img" src="img/gallery/23.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/24.jpg">
                   <img class="gallery_img" src="img/gallery/24.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/25.jpg">
                   <img class="gallery_img" src="img/gallery/25.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/26.jpg">
                   <img class="gallery_img" src="img/gallery/26.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/27.jpg">
                   <img class="gallery_img" src="img/gallery/27.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/28.jpg">
                   <img class="gallery_img" src="img/gallery/28.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
-				<a href="img/gallery/img-large4.jpg">
+				<a href="img/gallery/29.jpg">
                   <img class="gallery_img" src="img/gallery/29.jpg" alt="img" />
+                  <span class="view_btn">View</span>
+                </a>
+				<a href="img/gallery/30.jpg">
+                  <img class="gallery_img" src="img/gallery/30.jpg" alt="img" />
                   <span class="view_btn">View</span>
                 </a>
 				
@@ -241,12 +246,12 @@
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomLeft">
-                <p> Copyright &copy; All Rights Reserved</p>
+                <p> Copyright &copy; WpF. All Rights Reserved</p>
               </div>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
               <div class="footer_bootomRight">
-                <p>Designed by WpF. Modified and Cared by <a href="http://djpandey01.tk/" rel="nofollow">Dibyajyoti Pandey</a></p>
+                <p>Designed by WpF. Modified and Cared by <a href="http://www.djpandey.me/" rel="nofollow">S. M. Infotech</a></p>
               </div>
             </div>
           </div>
@@ -263,8 +268,7 @@
 
     <!-- initialize jQuery Library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Preloader js file -->
-    <script src="js/queryloader2.min.js" type="text/javascript"></script>
+    
     <!-- For smooth animatin  -->
     <script src="js/wow.min.js"></script>  
     <!-- Bootstrap js -->
